PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.3.21

- Apache:
  . Fixed bug #79030 (Upgrade apache2handler's php_apache_sapi_get_request_time
    to return usec). (Herbert256)

- COM:
  . Fixed bug #63208 (BSTR to PHP string conversion not binary safe). (cmb)
  
- Curl:
  . Fixed bug #79741 (curl_setopt CURLOPT_POSTFIELDS asserts on object with
    declared properties). (Nikita)

- Fileinfo:
  . Fixed bug #79756 (finfo_file crash (FILEINFO_MIME)). (cmb)

- FTP:
  . Fixed bug #55857 (ftp_size on large files). (cmb)

- Standard:
  . Fixed bug #70362 (Can't copy() large 'data://' with open_basedir). (cmb)

?? ??? ????, PHP 7.3.20

- Core:
  . Fixed bug #79650 (php-win.exe 100% cpu lockup). (cmb)
  . Fixed bug #79668 (get_defined_functions(true) may miss functions). (cmb,
    Nikita)
  . Fixed possibly unsupported timercmp() usage. (cmb)

- Exif:
  . Fixed bug #79687 (Sony picture - PHP Warning - Make, Model, MakerNotes). 
    (cmb)

- Filter:
  . Fixed bug #73527 (Invalid memory access in php_filter_strip). (cmb)

- GD:
  . Fixed bug #79676 (imagescale adds black border with IMG_BICUBIC). (cmb)

- OpenSSL:
  . Fixed bug #62890 (default_socket_timeout=-1 causes connection to timeout).
    (cmb)

- PDO SQLite:
  . Fixed bug #79664 (PDOStatement::getColumnMeta fails on empty result set).
    (cmb)

- SPL:
  . Fixed bug #79710 (Reproducible segfault in error_handler during GC
    involved an SplFileObject). (Nikita)

- Standard:
  . Fixed bug #74267 (segfault with streams and invalid data). (cmb)
  . Fixed bug #79579 (ZTS build of PHP 7.3.17 doesn't handle ERANGE for
    posix_getgrgid and others). (Böszörményi Zoltán)

11 Jun 2020, PHP 7.3.19

- Core:
  . Fixed bug #79566 (Private SHM is not private on Windows). (cmb)
  . Fixed bug #79489 (.user.ini does not inherit). (cmb)

- GD: